y.output
Terminals unused in grammar

    KW_THEN
    TOKEN_ERROR


State 47 conflicts: 1 reduce/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | ε

    4 declaration: var_declaration ';'
    5            | vec_declaration vec_init_opt ';'
    6            | func_declaration

    7 var_declaration: KW_INT TK_IDENTIFIER '=' LIT_INT
    8                | KW_CHAR TK_IDENTIFIER '=' LIT_INT
    9                | KW_REAL TK_IDENTIFIER '=' LIT_INT
   10                | KW_BOOL TK_IDENTIFIER '=' LIT_INT
   11                | KW_INT TK_IDENTIFIER '=' LIT_CHAR
   12                | KW_CHAR TK_IDENTIFIER '=' LIT_CHAR
   13                | KW_REAL TK_IDENTIFIER '=' LIT_CHAR
   14                | KW_BOOL TK_IDENTIFIER '=' LIT_CHAR
   15                | KW_INT TK_IDENTIFIER '=' LIT_REAL
   16                | KW_CHAR TK_IDENTIFIER '=' LIT_REAL
   17                | KW_REAL TK_IDENTIFIER '=' LIT_REAL
   18                | KW_BOOL TK_IDENTIFIER '=' LIT_REAL

   19 vec_init_opt: LIT_INT vec_init_opt
   20             | LIT_REAL vec_init_opt
   21             | LIT_CHAR vec_init_opt
   22             | ε

   23 vec_declaration: KW_INT TK_IDENTIFIER '[' LIT_INT ']'
   24                | KW_CHAR TK_IDENTIFIER '[' LIT_INT ']'
   25                | KW_REAL TK_IDENTIFIER '[' LIT_INT ']'
   26                | KW_BOOL TK_IDENTIFIER '[' LIT_INT ']'

   27 parameter: KW_INT TK_IDENTIFIER
   28          | KW_CHAR TK_IDENTIFIER
   29          | KW_REAL TK_IDENTIFIER
   30          | KW_BOOL TK_IDENTIFIER

   31 parameter_list: parameter
   32               | ',' parameter parameter_list
   33               | parameter parameter_list_aux
   34               | ε

   35 parameter_list_aux: ',' parameter parameter_list_aux
   36                   | parameter
   37                   | ε

   38 func_declaration: KW_INT TK_IDENTIFIER '(' parameter_list ')' body
   39                 | KW_CHAR TK_IDENTIFIER '(' parameter_list ')' body
   40                 | KW_REAL TK_IDENTIFIER '(' parameter_list ')' body
   41                 | KW_BOOL TK_IDENTIFIER '(' parameter_list ')' body

   42 body: '{' cmd_list '}'

   43 cmd_list: cmd ';' cmd_list
   44         | body cmd_list
   45         | conditional_cmd
   46         | ε

   47 cmd: var_attrib
   48    | vec_attrib
   49    | output_cmd
   50    | return_cmd
   51    | ε

   52 var_attrib: TK_IDENTIFIER '=' expr

   53 vec_attrib: TK_IDENTIFIER '[' expr ']' '=' expr

   54 output_cmd: KW_OUTPUT output_param_list

   55 output_param_list: LIT_STRING ',' output_param_list
   56                  | expr ',' output_param_list
   57                  | LIT_STRING
   58                  | expr

   59 return_cmd: KW_RETURN expr

   60 conditional_cmd: KW_IF '(' expr ')' cmd_list
   61                | KW_IF '(' expr ')' cmd_list KW_ELSE cmd_list
   62                | KW_IF '(' expr ')' KW_LOOP cmd_list

   63 input_expr: KW_INPUT '(' KW_INT ')'
   64           | KW_INPUT '(' KW_CHAR ')'
   65           | KW_INPUT '(' KW_REAL ')'
   66           | KW_INPUT '(' KW_BOOL ')'

   67 vec_access: TK_IDENTIFIER '[' expr ']'

   68 expr: TK_IDENTIFIER
   69     | LIT_INT
   70     | LIT_CHAR
   71     | LIT_REAL
   72     | vec_access
   73     | input_expr
   74     | func_call
   75     | expr '*' expr
   76     | expr '/' expr
   77     | expr '+' expr
   78     | expr '-' expr
   79     | '-' expr
   80     | '~' expr
   81     | expr '&' expr
   82     | expr '|' expr
   83     | expr OPERATOR_LE expr
   84     | expr OPERATOR_GE expr
   85     | expr OPERATOR_EQ expr
   86     | expr OPERATOR_DIF expr
   87     | expr '>' expr
   88     | expr '<' expr
   89     | '(' expr ')'

   90 func_call: TK_IDENTIFIER '(' expr_list ')'

   91 expr_list: expr
   92          | expr ',' expr_list
   93          | ε


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 81
    '(' (40) 38 39 40 41 60 61 62 63 64 65 66 89 90
    ')' (41) 38 39 40 41 60 61 62 63 64 65 66 89 90
    '*' (42) 75
    '+' (43) 77
    ',' (44) 32 35 55 56 92
    '-' (45) 78 79
    '/' (47) 76
    ';' (59) 4 5 43
    '<' (60) 88
    '=' (61) 7 8 9 10 11 12 13 14 15 16 17 18 52 53
    '>' (62) 87
    '[' (91) 23 24 25 26 53 67
    ']' (93) 23 24 25 26 53 67
    '{' (123) 42
    '|' (124) 82
    '}' (125) 42
    '~' (126) 80
    error (256)
    KW_CHAR (258) 8 12 16 24 28 39 64
    KW_INT (259) 7 11 15 23 27 38 63
    KW_REAL (260) 9 13 17 25 29 40 65
    KW_BOOL (261) 10 14 18 26 30 41 66
    KW_IF (262) 60 61 62
    KW_THEN (263)
    KW_ELSE (264) 61
    KW_LOOP (265) 62
    KW_INPUT (266) 63 64 65 66
    KW_OUTPUT (267) 54
    KW_RETURN (268) 59
    OPERATOR_LE (269) 83
    OPERATOR_GE (270) 84
    OPERATOR_EQ (271) 85
    OPERATOR_DIF (272) 86
    TK_IDENTIFIER (273) 7 8 9 10 11 12 13 14 15 16 17 18 23 24 25 26 27 28 29 30 38 39 40 41 52 53 67 68 90
    LIT_INT (274) 7 8 9 10 19 23 24 25 26 69
    LIT_REAL (275) 15 16 17 18 20 71
    LIT_CHAR (276) 11 12 13 14 21 70
    LIT_STRING (277) 55 57
    TOKEN_ERROR (278)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program (43)
        on left: 1
        on right: 0
    declaration_list (44)
        on left: 2 3
        on right: 1 2
    declaration (45)
        on left: 4 5 6
        on right: 2
    var_declaration (46)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 4
    vec_init_opt (47)
        on left: 19 20 21 22
        on right: 5 19 20 21
    vec_declaration (48)
        on left: 23 24 25 26
        on right: 5
    parameter (49)
        on left: 27 28 29 30
        on right: 31 32 33 35 36
    parameter_list (50)
        on left: 31 32 33 34
        on right: 32 38 39 40 41
    parameter_list_aux (51)
        on left: 35 36 37
        on right: 33 35
    func_declaration (52)
        on left: 38 39 40 41
        on right: 6
    body (53)
        on left: 42
        on right: 38 39 40 41 44
    cmd_list (54)
        on left: 43 44 45 46
        on right: 42 43 44 60 61 62
    cmd (55)
        on left: 47 48 49 50 51
        on right: 43
    var_attrib (56)
        on left: 52
        on right: 47
    vec_attrib (57)
        on left: 53
        on right: 48
    output_cmd (58)
        on left: 54
        on right: 49
    output_param_list (59)
        on left: 55 56 57 58
        on right: 54 55 56
    return_cmd (60)
        on left: 59
        on right: 50
    conditional_cmd (61)
        on left: 60 61 62
        on right: 45
    input_expr (62)
        on left: 63 64 65 66
        on right: 73
    vec_access (63)
        on left: 67
        on right: 72
    expr (64)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 52 53 56 58 59 60 61 62 67 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 91 92
    func_call (65)
        on left: 90
        on right: 74
    expr_list (66)
        on left: 91 92 93
        on right: 90 92


State 0

    0 $accept: • program $end

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    $default  reduce using rule 3 (declaration_list)

    program           go to state 5
    declaration_list  go to state 6
    declaration       go to state 7
    var_declaration   go to state 8
    vec_declaration   go to state 9
    func_declaration  go to state 10


State 1

    8 var_declaration: KW_CHAR • TK_IDENTIFIER '=' LIT_INT
   12                | KW_CHAR • TK_IDENTIFIER '=' LIT_CHAR
   16                | KW_CHAR • TK_IDENTIFIER '=' LIT_REAL
   24 vec_declaration: KW_CHAR • TK_IDENTIFIER '[' LIT_INT ']'
   39 func_declaration: KW_CHAR • TK_IDENTIFIER '(' parameter_list ')' body

    TK_IDENTIFIER  shift, and go to state 11


State 2

    7 var_declaration: KW_INT • TK_IDENTIFIER '=' LIT_INT
   11                | KW_INT • TK_IDENTIFIER '=' LIT_CHAR
   15                | KW_INT • TK_IDENTIFIER '=' LIT_REAL
   23 vec_declaration: KW_INT • TK_IDENTIFIER '[' LIT_INT ']'
   38 func_declaration: KW_INT • TK_IDENTIFIER '(' parameter_list ')' body

    TK_IDENTIFIER  shift, and go to state 12


State 3

    9 var_declaration: KW_REAL • TK_IDENTIFIER '=' LIT_INT
   13                | KW_REAL • TK_IDENTIFIER '=' LIT_CHAR
   17                | KW_REAL • TK_IDENTIFIER '=' LIT_REAL
   25 vec_declaration: KW_REAL • TK_IDENTIFIER '[' LIT_INT ']'
   40 func_declaration: KW_REAL • TK_IDENTIFIER '(' parameter_list ')' body

    TK_IDENTIFIER  shift, and go to state 13


State 4

   10 var_declaration: KW_BOOL • TK_IDENTIFIER '=' LIT_INT
   14                | KW_BOOL • TK_IDENTIFIER '=' LIT_CHAR
   18                | KW_BOOL • TK_IDENTIFIER '=' LIT_REAL
   26 vec_declaration: KW_BOOL • TK_IDENTIFIER '[' LIT_INT ']'
   41 func_declaration: KW_BOOL • TK_IDENTIFIER '(' parameter_list ')' body

    TK_IDENTIFIER  shift, and go to state 14


State 5

    0 $accept: program • $end

    $end  shift, and go to state 15


State 6

    1 program: declaration_list •

    $default  reduce using rule 1 (program)


State 7

    2 declaration_list: declaration • declaration_list

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    $default  reduce using rule 3 (declaration_list)

    declaration_list  go to state 16
    declaration       go to state 7
    var_declaration   go to state 8
    vec_declaration   go to state 9
    func_declaration  go to state 10


State 8

    4 declaration: var_declaration • ';'

    ';'  shift, and go to state 17


State 9

    5 declaration: vec_declaration • vec_init_opt ';'

    LIT_INT   shift, and go to state 18
    LIT_REAL  shift, and go to state 19
    LIT_CHAR  shift, and go to state 20

    $default  reduce using rule 22 (vec_init_opt)

    vec_init_opt  go to state 21


State 10

    6 declaration: func_declaration •

    $default  reduce using rule 6 (declaration)


State 11

    8 var_declaration: KW_CHAR TK_IDENTIFIER • '=' LIT_INT
   12                | KW_CHAR TK_IDENTIFIER • '=' LIT_CHAR
   16                | KW_CHAR TK_IDENTIFIER • '=' LIT_REAL
   24 vec_declaration: KW_CHAR TK_IDENTIFIER • '[' LIT_INT ']'
   39 func_declaration: KW_CHAR TK_IDENTIFIER • '(' parameter_list ')' body

    '='  shift, and go to state 22
    '['  shift, and go to state 23
    '('  shift, and go to state 24


State 12

    7 var_declaration: KW_INT TK_IDENTIFIER • '=' LIT_INT
   11                | KW_INT TK_IDENTIFIER • '=' LIT_CHAR
   15                | KW_INT TK_IDENTIFIER • '=' LIT_REAL
   23 vec_declaration: KW_INT TK_IDENTIFIER • '[' LIT_INT ']'
   38 func_declaration: KW_INT TK_IDENTIFIER • '(' parameter_list ')' body

    '='  shift, and go to state 25
    '['  shift, and go to state 26
    '('  shift, and go to state 27


State 13

    9 var_declaration: KW_REAL TK_IDENTIFIER • '=' LIT_INT
   13                | KW_REAL TK_IDENTIFIER • '=' LIT_CHAR
   17                | KW_REAL TK_IDENTIFIER • '=' LIT_REAL
   25 vec_declaration: KW_REAL TK_IDENTIFIER • '[' LIT_INT ']'
   40 func_declaration: KW_REAL TK_IDENTIFIER • '(' parameter_list ')' body

    '='  shift, and go to state 28
    '['  shift, and go to state 29
    '('  shift, and go to state 30


State 14

   10 var_declaration: KW_BOOL TK_IDENTIFIER • '=' LIT_INT
   14                | KW_BOOL TK_IDENTIFIER • '=' LIT_CHAR
   18                | KW_BOOL TK_IDENTIFIER • '=' LIT_REAL
   26 vec_declaration: KW_BOOL TK_IDENTIFIER • '[' LIT_INT ']'
   41 func_declaration: KW_BOOL TK_IDENTIFIER • '(' parameter_list ')' body

    '='  shift, and go to state 31
    '['  shift, and go to state 32
    '('  shift, and go to state 33


State 15

    0 $accept: program $end •

    $default  accept


State 16

    2 declaration_list: declaration declaration_list •

    $default  reduce using rule 2 (declaration_list)


State 17

    4 declaration: var_declaration ';' •

    $default  reduce using rule 4 (declaration)


State 18

   19 vec_init_opt: LIT_INT • vec_init_opt

    LIT_INT   shift, and go to state 18
    LIT_REAL  shift, and go to state 19
    LIT_CHAR  shift, and go to state 20

    $default  reduce using rule 22 (vec_init_opt)

    vec_init_opt  go to state 34


State 19

   20 vec_init_opt: LIT_REAL • vec_init_opt

    LIT_INT   shift, and go to state 18
    LIT_REAL  shift, and go to state 19
    LIT_CHAR  shift, and go to state 20

    $default  reduce using rule 22 (vec_init_opt)

    vec_init_opt  go to state 35


State 20

   21 vec_init_opt: LIT_CHAR • vec_init_opt

    LIT_INT   shift, and go to state 18
    LIT_REAL  shift, and go to state 19
    LIT_CHAR  shift, and go to state 20

    $default  reduce using rule 22 (vec_init_opt)

    vec_init_opt  go to state 36


State 21

    5 declaration: vec_declaration vec_init_opt • ';'

    ';'  shift, and go to state 37


State 22

    8 var_declaration: KW_CHAR TK_IDENTIFIER '=' • LIT_INT
   12                | KW_CHAR TK_IDENTIFIER '=' • LIT_CHAR
   16                | KW_CHAR TK_IDENTIFIER '=' • LIT_REAL

    LIT_INT   shift, and go to state 38
    LIT_REAL  shift, and go to state 39
    LIT_CHAR  shift, and go to state 40


State 23

   24 vec_declaration: KW_CHAR TK_IDENTIFIER '[' • LIT_INT ']'

    LIT_INT  shift, and go to state 41


State 24

   39 func_declaration: KW_CHAR TK_IDENTIFIER '(' • parameter_list ')' body

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 46

    $default  reduce using rule 34 (parameter_list)

    parameter       go to state 47
    parameter_list  go to state 48


State 25

    7 var_declaration: KW_INT TK_IDENTIFIER '=' • LIT_INT
   11                | KW_INT TK_IDENTIFIER '=' • LIT_CHAR
   15                | KW_INT TK_IDENTIFIER '=' • LIT_REAL

    LIT_INT   shift, and go to state 49
    LIT_REAL  shift, and go to state 50
    LIT_CHAR  shift, and go to state 51


State 26

   23 vec_declaration: KW_INT TK_IDENTIFIER '[' • LIT_INT ']'

    LIT_INT  shift, and go to state 52


State 27

   38 func_declaration: KW_INT TK_IDENTIFIER '(' • parameter_list ')' body

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 46

    $default  reduce using rule 34 (parameter_list)

    parameter       go to state 47
    parameter_list  go to state 53


State 28

    9 var_declaration: KW_REAL TK_IDENTIFIER '=' • LIT_INT
   13                | KW_REAL TK_IDENTIFIER '=' • LIT_CHAR
   17                | KW_REAL TK_IDENTIFIER '=' • LIT_REAL

    LIT_INT   shift, and go to state 54
    LIT_REAL  shift, and go to state 55
    LIT_CHAR  shift, and go to state 56


State 29

   25 vec_declaration: KW_REAL TK_IDENTIFIER '[' • LIT_INT ']'

    LIT_INT  shift, and go to state 57


State 30

   40 func_declaration: KW_REAL TK_IDENTIFIER '(' • parameter_list ')' body

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 46

    $default  reduce using rule 34 (parameter_list)

    parameter       go to state 47
    parameter_list  go to state 58


State 31

   10 var_declaration: KW_BOOL TK_IDENTIFIER '=' • LIT_INT
   14                | KW_BOOL TK_IDENTIFIER '=' • LIT_CHAR
   18                | KW_BOOL TK_IDENTIFIER '=' • LIT_REAL

    LIT_INT   shift, and go to state 59
    LIT_REAL  shift, and go to state 60
    LIT_CHAR  shift, and go to state 61


State 32

   26 vec_declaration: KW_BOOL TK_IDENTIFIER '[' • LIT_INT ']'

    LIT_INT  shift, and go to state 62


State 33

   41 func_declaration: KW_BOOL TK_IDENTIFIER '(' • parameter_list ')' body

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 46

    $default  reduce using rule 34 (parameter_list)

    parameter       go to state 47
    parameter_list  go to state 63


State 34

   19 vec_init_opt: LIT_INT vec_init_opt •

    $default  reduce using rule 19 (vec_init_opt)


State 35

   20 vec_init_opt: LIT_REAL vec_init_opt •

    $default  reduce using rule 20 (vec_init_opt)


State 36

   21 vec_init_opt: LIT_CHAR vec_init_opt •

    $default  reduce using rule 21 (vec_init_opt)


State 37

    5 declaration: vec_declaration vec_init_opt ';' •

    $default  reduce using rule 5 (declaration)


State 38

    8 var_declaration: KW_CHAR TK_IDENTIFIER '=' LIT_INT •

    $default  reduce using rule 8 (var_declaration)


State 39

   16 var_declaration: KW_CHAR TK_IDENTIFIER '=' LIT_REAL •

    $default  reduce using rule 16 (var_declaration)


State 40

   12 var_declaration: KW_CHAR TK_IDENTIFIER '=' LIT_CHAR •

    $default  reduce using rule 12 (var_declaration)


State 41

   24 vec_declaration: KW_CHAR TK_IDENTIFIER '[' LIT_INT • ']'

    ']'  shift, and go to state 64


State 42

   28 parameter: KW_CHAR • TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 65


State 43

   27 parameter: KW_INT • TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 66


State 44

   29 parameter: KW_REAL • TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 67


State 45

   30 parameter: KW_BOOL • TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 68


State 46

   32 parameter_list: ',' • parameter parameter_list

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45

    parameter  go to state 69


State 47

   31 parameter_list: parameter •
   33               | parameter • parameter_list_aux

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 70

    ')'       reduce using rule 31 (parameter_list)
    ')'       [reduce using rule 37 (parameter_list_aux)]
    $default  reduce using rule 31 (parameter_list)

    parameter           go to state 71
    parameter_list_aux  go to state 72


State 48

   39 func_declaration: KW_CHAR TK_IDENTIFIER '(' parameter_list • ')' body

    ')'  shift, and go to state 73


State 49

    7 var_declaration: KW_INT TK_IDENTIFIER '=' LIT_INT •

    $default  reduce using rule 7 (var_declaration)


State 50

   15 var_declaration: KW_INT TK_IDENTIFIER '=' LIT_REAL •

    $default  reduce using rule 15 (var_declaration)


State 51

   11 var_declaration: KW_INT TK_IDENTIFIER '=' LIT_CHAR •

    $default  reduce using rule 11 (var_declaration)


State 52

   23 vec_declaration: KW_INT TK_IDENTIFIER '[' LIT_INT • ']'

    ']'  shift, and go to state 74


State 53

   38 func_declaration: KW_INT TK_IDENTIFIER '(' parameter_list • ')' body

    ')'  shift, and go to state 75


State 54

    9 var_declaration: KW_REAL TK_IDENTIFIER '=' LIT_INT •

    $default  reduce using rule 9 (var_declaration)


State 55

   17 var_declaration: KW_REAL TK_IDENTIFIER '=' LIT_REAL •

    $default  reduce using rule 17 (var_declaration)


State 56

   13 var_declaration: KW_REAL TK_IDENTIFIER '=' LIT_CHAR •

    $default  reduce using rule 13 (var_declaration)


State 57

   25 vec_declaration: KW_REAL TK_IDENTIFIER '[' LIT_INT • ']'

    ']'  shift, and go to state 76


State 58

   40 func_declaration: KW_REAL TK_IDENTIFIER '(' parameter_list • ')' body

    ')'  shift, and go to state 77


State 59

   10 var_declaration: KW_BOOL TK_IDENTIFIER '=' LIT_INT •

    $default  reduce using rule 10 (var_declaration)


State 60

   18 var_declaration: KW_BOOL TK_IDENTIFIER '=' LIT_REAL •

    $default  reduce using rule 18 (var_declaration)


State 61

   14 var_declaration: KW_BOOL TK_IDENTIFIER '=' LIT_CHAR •

    $default  reduce using rule 14 (var_declaration)


State 62

   26 vec_declaration: KW_BOOL TK_IDENTIFIER '[' LIT_INT • ']'

    ']'  shift, and go to state 78


State 63

   41 func_declaration: KW_BOOL TK_IDENTIFIER '(' parameter_list • ')' body

    ')'  shift, and go to state 79


State 64

   24 vec_declaration: KW_CHAR TK_IDENTIFIER '[' LIT_INT ']' •

    $default  reduce using rule 24 (vec_declaration)


State 65

   28 parameter: KW_CHAR TK_IDENTIFIER •

    $default  reduce using rule 28 (parameter)


State 66

   27 parameter: KW_INT TK_IDENTIFIER •

    $default  reduce using rule 27 (parameter)


State 67

   29 parameter: KW_REAL TK_IDENTIFIER •

    $default  reduce using rule 29 (parameter)


State 68

   30 parameter: KW_BOOL TK_IDENTIFIER •

    $default  reduce using rule 30 (parameter)


State 69

   32 parameter_list: ',' parameter • parameter_list

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 46

    $default  reduce using rule 34 (parameter_list)

    parameter       go to state 47
    parameter_list  go to state 80


State 70

   35 parameter_list_aux: ',' • parameter parameter_list_aux

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45

    parameter  go to state 81


State 71

   36 parameter_list_aux: parameter •

    $default  reduce using rule 36 (parameter_list_aux)


State 72

   33 parameter_list: parameter parameter_list_aux •

    $default  reduce using rule 33 (parameter_list)


State 73

   39 func_declaration: KW_CHAR TK_IDENTIFIER '(' parameter_list ')' • body

    '{'  shift, and go to state 82

    body  go to state 83


State 74

   23 vec_declaration: KW_INT TK_IDENTIFIER '[' LIT_INT ']' •

    $default  reduce using rule 23 (vec_declaration)


State 75

   38 func_declaration: KW_INT TK_IDENTIFIER '(' parameter_list ')' • body

    '{'  shift, and go to state 82

    body  go to state 84


State 76

   25 vec_declaration: KW_REAL TK_IDENTIFIER '[' LIT_INT ']' •

    $default  reduce using rule 25 (vec_declaration)


State 77

   40 func_declaration: KW_REAL TK_IDENTIFIER '(' parameter_list ')' • body

    '{'  shift, and go to state 82

    body  go to state 85


State 78

   26 vec_declaration: KW_BOOL TK_IDENTIFIER '[' LIT_INT ']' •

    $default  reduce using rule 26 (vec_declaration)


State 79

   41 func_declaration: KW_BOOL TK_IDENTIFIER '(' parameter_list ')' • body

    '{'  shift, and go to state 82

    body  go to state 86


State 80

   32 parameter_list: ',' parameter parameter_list •

    $default  reduce using rule 32 (parameter_list)


State 81

   35 parameter_list_aux: ',' parameter • parameter_list_aux

    KW_CHAR  shift, and go to state 42
    KW_INT   shift, and go to state 43
    KW_REAL  shift, and go to state 44
    KW_BOOL  shift, and go to state 45
    ','      shift, and go to state 70

    $default  reduce using rule 37 (parameter_list_aux)

    parameter           go to state 71
    parameter_list_aux  go to state 87


State 82

   42 body: '{' • cmd_list '}'

    KW_IF          shift, and go to state 88
    KW_OUTPUT      shift, and go to state 89
    KW_RETURN      shift, and go to state 90
    TK_IDENTIFIER  shift, and go to state 91
    '{'            shift, and go to state 82

    ';'       reduce using rule 51 (cmd)
    $default  reduce using rule 46 (cmd_list)

    body             go to state 92
    cmd_list         go to state 93
    cmd              go to state 94
    var_attrib       go to state 95
    vec_attrib       go to state 96
    output_cmd       go to state 97
    return_cmd       go to state 98
    conditional_cmd  go to state 99


State 83

   39 func_declaration: KW_CHAR TK_IDENTIFIER '(' parameter_list ')' body •

    $default  reduce using rule 39 (func_declaration)


State 84

   38 func_declaration: KW_INT TK_IDENTIFIER '(' parameter_list ')' body •

    $default  reduce using rule 38 (func_declaration)


State 85

   40 func_declaration: KW_REAL TK_IDENTIFIER '(' parameter_list ')' body •

    $default  reduce using rule 40 (func_declaration)


State 86

   41 func_declaration: KW_BOOL TK_IDENTIFIER '(' parameter_list ')' body •

    $default  reduce using rule 41 (func_declaration)


State 87

   35 parameter_list_aux: ',' parameter parameter_list_aux •

    $default  reduce using rule 35 (parameter_list_aux)


State 88

   60 conditional_cmd: KW_IF • '(' expr ')' cmd_list
   61                | KW_IF • '(' expr ')' cmd_list KW_ELSE cmd_list
   62                | KW_IF • '(' expr ')' KW_LOOP cmd_list

    '('  shift, and go to state 100


State 89

   54 output_cmd: KW_OUTPUT • output_param_list

    KW_INPUT       shift, and go to state 101
    TK_IDENTIFIER  shift, and go to state 102
    LIT_INT        shift, and go to state 103
    LIT_REAL       shift, and go to state 104
    LIT_CHAR       shift, and go to state 105
    LIT_STRING     shift, and go to state 106
    '~'            shift, and go to state 107
    '-'            shift, and go to state 108
    '('            shift, and go to state 109

    output_param_list  go to state 110
    input_expr         go to state 111
    vec_access         go to state 112
    expr               go to state 113
    func_call          go to state 114


State 90

   59 return_cmd: KW_RETURN • expr

    KW_INPUT       shift, and go to state 101
    TK_IDENTIFIER  shift, and go to state 102
    LIT_INT        shift, and go to state 103
    LIT_REAL       shift, and go to state 104
    LIT_CHAR       shift, and go to state 105
    '~'            shift, and go to state 107
    '-'            shift, and go to state 108
    '('            shift, and go to state 109

    input_expr  go to state 111
    vec_access  go to state 112
    expr        go to state 115
    func_call   go to state 114


State 91

   52 var_attrib: TK_IDENTIFIER • '=' expr
   53 vec_attrib: TK_IDENTIFIER • '[' expr ']' '=' expr

    '='  shift, and go to state 116
    '['  shift, and go to state 117


State 92

   44 cmd_list: body • cmd_list

    KW_IF          shift, and go to state 88
    KW_OUTPUT      shift, and go to state 89
    KW_RETURN      shift, and go to state 90
    TK_IDENTIFIER  shift, and go to state 91
    '{'            shift, and go to state 82

    ';'       reduce using rule 51 (cmd)
    $default  reduce using rule 46 (cmd_list)

    body             go to state 92
    cmd_list         go to state 118
    cmd              go to state 94
    var_attrib       go to state 95
    vec_attrib       go to state 96
    output_cmd       go to state 97
    return_cmd       go to state 98
    conditional_cmd  go to state 99


State 93

   42 body: '{' cmd_list • '}'

    '}'  shift, and go to state 119


State 94

   43 cmd_list: cmd • ';' cmd_list

    ';'  shift, and go to state 120


State 95

   47 cmd: var_attrib •

    $default  reduce using rule 47 (cmd)


State 96

   48 cmd: vec_attrib •

    $default  reduce using rule 48 (cmd)


State 97

   49 cmd: output_cmd •

    $default  reduce using rule 49 (cmd)


State 98

   50 cmd: return_cmd •

    $default  reduce using rule 50 (cmd)


State 99

   45 cmd_list: conditional_cmd •

    $default  reduce using rule 45 (cmd_list)


State 100

   60 conditional_cmd: KW_IF '(' • expr ')' cmd_list
   61                | KW_IF '(' • expr ')' cmd_list KW_ELSE cmd_list
   62                | KW_IF '(' • expr ')' KW_LOOP cmd_list

    KW_INPUT       shift, and go to state 101
    TK_IDENTIFIER  shift, and go to state 102
    LIT_INT        shift, and go to state 103
    LIT_REAL       shift, and go to state 104
    LIT_CHAR       shift, and go to state 105
    '~'            shift, and go to state 107
    '-'            shift, and go to state 108
    '('            shift, and go to state 109

    input_expr  go to state 111
    vec_access  go to state 112
    expr        go to state 121
    func_call   go to state 114


State 101

   63 input_expr: KW_INPUT • '(' KW_INT ')'
   64           | KW_INPUT • '(' KW_CHAR ')'
   65           | KW_INPUT • '(' KW_REAL ')'
   66           | KW_INPUT • '(' KW_BOOL ')'

    '('  shift, and go to state 122


State 102

   67 vec_access: TK_IDENTIFIER • '[' expr ']'
   68 expr: TK_IDENTIFIER •
   90 func_call: TK_IDENTIFIER • '(' expr_list ')'

    '['  shift, and go to state 123
    '('  shift, and go to state 124

    $default  reduce using rule 68 (expr)


State 103

   69 expr: LIT_INT •

    $default  reduce using rule 69 (expr)


State 104

   71 expr: LIT_REAL •

    $default  reduce using rule 71 (expr)


State 105

   70 expr: LIT_CHAR •

    $default  reduce using rule 70 (expr)


State 106

   55 output_param_list: LIT_STRING • ',' output_param_list
   57                  | LIT_STRING •

    ','  shift, and go to state 125

    $default  reduce using rule 57 (output_param_list)


State 107

   80 expr: '~' • expr

    KW_INPUT       shift, and go to state 101
    TK_IDENTIFIER  shift, and go to state 102
    LIT_INT        shift, and go to state 103
    LIT_REAL       shift, and go to state 104
    LIT_CHAR       shift, and go to state 105
    '~'            shift, and go to state 107
    '-'            shift, and go to state 108
    '('            shift, and go to state 109

    input_expr  go to state 111
    vec_access  go to state 112
    expr        go to state 126
    func_call   go to state 114


State 108

   79 expr: '-' • expr

    KW_INPUT       shift, and go to state 101
    TK_IDENTIFIER  shift, and go to state 102
    LIT_INT        shift, and go to state 103
    LIT_REAL       shift, and go to state 104
    LIT_CHAR       shift, and go to state 105
    '~'            shift, and go to state 107
    '-'            shift, and go to state 108
    '('            shift, and go to state 109

    input_expr  go to state 111
    vec_access  go to state 112
    expr        go to state 127
    func_call   go to state 114


State 109

   89 expr: '(' • expr ')'

    KW_INPUT       shift, and go to state 101
    TK_IDENTIFIER  shift, and go to state 102
    LIT_INT        shift, and go to state 103
    LIT_REAL       shift, and go to state 104
    LIT_CHAR       shift, and go to state 105
    '~'            shift, and go to state 107
    '-'            shift, and go to state 108
    '('            shift, and go to state 109

    input_expr  go to state 111
    vec_access  go to state 112
    expr        go to state 128
    func_call   go to state 114


State 110

   54 output_cmd: KW_OUTPUT output_param_list •

    $default  reduce using rule 54 (output_cmd)


State 111

   73 expr: input_expr •

    $default  reduce using rule 73 (expr)


State 112

   72 expr: vec_access •

    $default  reduce using rule 72 (expr)


State 113
